# QuickCreate

./: CMakeLists.txt
src/: CommandParser.cpp  CommandParser.h  manager.cpp  manager.h
test/: QuickCreate.cpp  main.cpp  test_class_create.cpp  test_cmakelists_create.cpp  test_cpp_create.cpp  test_header_create.cpp  test_project_create.cpp
